--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "cross-env NODE_ENV=production react-router build",
     "dev": "bunx --bun vite",
     "start": "cross-env NODE_ENV=production bun ./build/server/index.js",
+    "test": "vitest",
+    "test:watch": "vitest watch",
     "typecheck": "react-router typegen && tsc",
     "check": "biome check --write ."
   },
@@ -31,15 +33,20 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@react-router/dev": "^7.0.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "happy-dom": "^15.11.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
